# EmbarcaTech-Residencia-

./: Video_YouTube.txt
Tarefa1/: CMakeLists.txt  Tarefa1.c  lwipopts.h  pico_config.h
Tarefa3/: CMakeLists.txt  FreeRTOSConfig.h  Youtube.txt  lwipopts.h  tarefa3.c
Tarefa3/headers/: led.h  mqtt_comm.h  sensor_mpu6050.h  wifi_conn.h
Tarefa3/src/: led.c  mqtt_comm.c  sensor_mpu6050.c  wifi_conn.c
tarefa2/: CMakeLists.txt  lwipopts.h  tarefa2.c
tarefa2/headers/: mqtt_comm.h
tarefa2/src/: mqtt_comm.c  wifi_conn.c
